kubernetes/front-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: front-admin
  name: front-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      service: front-admin
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        network/ticket-app-front-default: "true"
        service: front-admin
    spec:
      containers:
        - image: foopy7774/front-admin:latest
          name: front-admin
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4002
          resources: {}
      restartPolicy: Always
status: {}
