kubernetes/front-mobile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: front-mobile
  name: front-mobile
spec:
  replicas: 1
  selector:
    matchLabels:
      service: front-mobile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: front-mobile
    spec:
      containers:
        - image: front-mobile
          name: front-mobile
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
