kubernetes/front-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: front-admin
  name: front-admin
spec:
  ports:
    - name: "4002"
      port: 4002
      targetPort: 4002
  selector:
    service: front-admin
status:
  loadBalancer: {}
