kubernetes/front-desktop-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: front-desktop
  name: front-desktop
spec:
  ports:
    - name: "3002"
      port: 3002
      targetPort: 3000
  selector:
    service: front-desktop
status:
  loadBalancer: {}
