kubernetes/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - tickets.rklf.fr
    secretName: tickets-rklf-tls
  rules:
  - host: "tickets.rklf.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-mobile
            port:
              number: 4001
  - host: "tickets.rklf.fr"
    http:
      paths:
      - pathType: Prefix
        path: "/admin"
        backend:
          service:
            name: front-admin
            port:
              number: 4002
